--- a/index.ipynb
+++ b/index.ipynb
@@ -167,6 +167,7 @@
    "outputs": [],
    "source": [
     "def bytes_to_str(b, encoding='ascii'):\n",
+    "    return b.encode(encoding)\n",
     "    '''Returns a string version of the bytes'''\n",
     "    pass\n",
     "\n",
