--- a/index.ipynb
+++ b/index.ipynb
@@ -170,7 +170,7 @@
     "    return b.encode(encoding)\n",
     "\n",
     "def str_to_bytes(s, encoding='ascii'):\n",
-    "    '''Returns a bytes version of the string'''\n",
+    "    s.decode()\n",
     "    pass"
    ]
   }
