automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -170,8 +170,7 @@
     "    return b.encode(encoding)\n",
     "\n",
     "def str_to_bytes(s, encoding='ascii'):\n",
-    "    s.decode()\n",
-    "    pass"
+    "    return s.decode(encoding)\n"
    ]
   }
  ],
