--- a/index.ipynb
+++ b/index.ipynb
@@ -167,7 +167,7 @@
    "outputs": [],
    "source": [
     "def bytes_to_str(b, encoding='ascii'):\n",
-    "    return b.encode(encoding)\n",
+    "    return b.decode(encoding)\n",
     "\n",
     "def str_to_bytes(s, encoding='ascii'):\n",
     "    return s.decode(encoding)\n"
