automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
     "    return b.decode(encoding)\n",
     "\n",
     "def str_to_bytes(s, encoding='ascii'):\n",
-    "    return s.decode(encoding)\n"
+    "    return s.encode(encoding)\n"
    ]
   },
   {
